--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.0",
     "sass": "^1.58.0"
   },
   "scripts": {
